workspace = { members = ["traderusty_wrap"] }
[package]
name = "traderusty_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "traderusty_rust"
crate-type = ["cdylib"]

[dependencies]
bytecount = "0.6.8"
tempfile = "3.10.1"

